Fix RDF skeleton tab overflow

--- a/src/main/resources/module/styles/rdf-schema-alignment-dialog.css
+++ b/src/main/resources/module/styles/rdf-schema-alignment-dialog.css
@@ -17,7 +17,8 @@ div.rdf-schema-alignment-dialog-preview pre {
 }
 
 div.rdf-schema-alignment-dialog-canvas {
-	height: 350px;
+    height: 350px;
+    overflow: auto;
 }
 
 div.note{
